# dilemanator

./: .dockerignore  .editorconfig  .env.example  Dockerfile  README.md  pyproject.toml
.devcontainer/: Dockerfile  devcontainer.json
prompts/: base.md
src/: main.py
src/graph/: app.py
src/graph/nodes/: dilema_generator.py
src/schemas/: dilema.py  graph_state.py
src/schemas/enums/: feedback.py
src/utils/: log.py  prompt.py  settings.py
