[project]
name = "dilemanator"
version = "0.1.0"
description = "Dilema generator"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "langchain-core>=0.3.19",
    "langchain-google-genai>=2.0.4",
    "langgraph>=0.2.50",
    "pydantic>=2.9.2",
    "pydantic-settings>=2.6.1",
    "streamlit>=1.40.1",
]

[dependency-groups]
dev = [
    "ruff>=0.7.4",
]
